--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,11 +1,9 @@
-.nav {
+.login {
   display: flex;
-  padding: 10px;
-  justify-content: space-between;
-  align-items: center;
   gap: 20px;
+  margin-right: 50px;
+  justify-content: end;
 }
-
 .link {
   color: black;
   text-decoration: none;
