--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -18,6 +18,12 @@
   font-size: 16px;
   padding: 8px;
 }
+.field {
+  border-radius: 4px;
+  width: 250px;
+  font-size: 16px;
+  padding: 5px;
+}
 
 .button:disabled {
   background: #aaa;
